chore(shop): extraction complete du module shop cote backend
Suppression totale du module shop de l'app budget (phase 1/7).
Le code est preserve dans le tag archive/shop-v0 pour reference
future lors de la refonte separee dans le projet kshop.

Changements majeurs:
- Suppression Product (model, service, controller, repository, DTOs, tests)
- Suppression ProductSale / SellRequest / RestockRequest
- Retrait champs shop de UserPreference (shopAccountId, includeShopInBalance)
- Retrait isShopAccount de AccountResponse
- Retrait productId/productName de TransactionResponse
- Retrait relation Transaction -> Product
- Retrait SHOP de l'enum Feature et DEFAULT_FEATURES
- Retrait categorie systeme Boutique du seeding
- Migration V26__drop_shop.sql: DROP FK, colonnes, table products, nettoyage enabled_features/nav_order CSV
- Mise a jour seeds R__dev_seed.sql et suppression V25__seed_products_shop.sql

Hors scope assume: garde-fou defensif dans V24__seed_april_2026.sql
pour ignorer le seed si les comptes n'existent pas encore (bug
pre-existant rencontre lors de la re-initialisation DB dev, corrige
opportunement pour debloquer l'environnement local).

444 tests verts. BUILD SUCCESS.